# perl-Skolab

./: AUTHORS  ChangeLog  ChangeLog.kolabv2  DEVELOPMENT  INSTALL  MANIFEST  META.yml  Makefile.PL  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  kolab.mk  perl-kolab.spec  perl-kolab.spec.in
Kolab/: Kolab.pm.in
Kolab-Conf/: Conf.pm.in
Kolab-Cyrus/: Cyrus.pm
Kolab-DirServ/: DirServ.pm.in
Kolab-LDAP/: LDAP.pm.in
Kolab-LDAP-Backend/: Backend.pm
Kolab-LDAP-Backend-ad/: ad.pm
Kolab-LDAP-Backend-dirservd/: dirservd.pm
Kolab-LDAP-Backend-slurpd/: slurpd.pm.in
Kolab-Mailer/: Mailer.pm.in
Kolab-Util/: Util.pm
data/etc/: quotawarning.txt
debian/: changelog  control  copyright  dirs  rules  svn-deblayout  uupdate-wrapper  watch
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  control.svn-base  copyright.svn-base  rules.svn-base
debian/patches/: 00list  10-Kolab.pm.dpatch  10-invoke-rc.diff  20-LDAP.pm-cachefiles.dpatch  20-buildCyrusConfig.dpatch  30-bootstrap.diff  30-slurpd.pm.dpatch  40-disable-amavis.diff  40-dist_conf.dpatch  50-sync-ldap-backend.diff  50-sync-ldap-backend.dpatch  51-syncrepl.diff  60-fix-build.diff  70-reload-cyrus-conf.diff  90-fds-backend.dpatch  90-slapd-runtime-config.diff  92-sieve-port-4190.diff  series
debian/patches/.svn/: entries
debian/patches/.svn/text-base/: 00list.svn-base
debian/patches/common/: dist_conf.dpatch
lib/: Kolab.pm  Skolab.pm
lib/Kolab/: Conf.pm  Cyrus.pm  LDAP.pm  Util.pm
lib/Kolab/LDAP/: Backend.pm
lib/Kolab/LDAP/Backend/: ad.pm  fds.pm  slurpd.pm  syncrepl.pm
lib/Skolab/: Conf.pm  Cyrus.pm  LDAP.pm  Util.pm
lib/Skolab/LDAP/: Backend.pm
lib/Skolab/LDAP/Backend/: ad.pm  fds.pm  slurpd.pm  syncrepl.pm
sbin/: kolab_bootstrap.in  kolab_imappartitions.in  kolabcheckperm.in  kolabconf.in  kolabd.in  skolab_bootstrap.in  skolab_imappartitions.in  skolabcheckperm.in  skolabconf.in  skolabd.in
